[package]
name = "culper-server"
version = "0.2.0"
authors = ["Mäx <max.kiehnscherf@gmail.com>"]
edition = "2018"

[dependencies]
culper-lib = "0.1.0"
futures = "0.1"
env_logger = "0.5"
actix = "0.7"
actix-web = "0.7"
slog = "2.4.1"
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-scope = "4.1.0"
slog-stdlog = "3.0.2"
chrono = "0.4.6"
slog-envlogger = "2.1.0"
log = "0.4.6"
toml = "0.4.8"
sequoia = { git = "https://github.com/maexrakete/sequoia.git" }
clap = "2.32.0"
failure = "0.1.2"
dirs = "1.0.4"
lazy_static = "1.2.0"
parking_lot = "0.7.0"
uuid = "0.7.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.10.0"
r2d2 = "0.8.3"
r2d2_sqlite = "0.6.0"
rusqlite = "0.14.0"
time = "0.1.41"

[[bin]]
name = "culper-server"
path = "src/culper_server.rs"
